--- a/lectures/004-inference/004-inference.Rmd
+++ b/lectures/004-inference/004-inference.Rmd
@@ -96,6 +96,243 @@ ggplot(data.frame(x = c(min2, max2)), aes(x = x)) +
 
 
 ---
+layout: false
+class: inverse, middle
+
+
+# Sampling distributions
+
+
+
+---
+
+# Sampling distributions
+
+Suppose we have a .hi[population] consisting of *N = 2,930* observations, and we are interested in one variable called *X*.
+
+--
+
+Its population mean (*&mu;*) is 10,148.
+
+--
+
+<br>
+
+Now suppose we select a .hi[random sample] of size *n = 50* from this population.
+
+--
+
+Estimating the *mean* of this sample gives us $\bar{x} =$ 10,761.78.
+
+
+---
+
+# Sampling distributions
+
+Then, we select another random *sample* of size *n = 50*.
+
+--
+
+Its mean is $\bar{x} =$ 12,611.9.
+
+--
+
+<br>
+
+A third random sample of size *n = 50* gives a sample mean of $\bar{x} =$ 9,058.66.
+
+--
+
+<br><br>
+
+What if we do this procedure *5,000* times?
+
+---
+
+# Sampling distributions
+
+```{r, echo = F, dev = "svg", fig.height = 5.5}
+
+sample_means50 <- rep(NA, 5000)  ## creating an empty vector of 5000 values.
+
+for(i in 1:5000){                ## starting the loop (5,000 iterations).
+  s50_loop <- sample(lot_area, 50)        ## drawing samples of size n = 50
+  sample_means50[i] <- mean(s50_loop) ## filling the empty values with the sample means.
+}
+
+
+sample_means50 <- sample_means50 %>% 
+  as_tibble()
+
+sample_means50 %>% 
+  ggplot(aes(x = value)) +
+  geom_histogram(color = "white") +
+  scale_x_comma() +
+  labs(x = "Mean value",
+       y = "Count") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+
+```
+
+
+---
+
+# Sampling distributions
+
+Now, suppose we increase the sample size to *n = 500*.
+
+--
+
+<br><br>
+
+Once again, we repeat the procedure *5,000* times.
+
+---
+
+
+# Sampling distributions
+
+```{r, echo = F, dev = "svg", fig.height = 5.5}
+sample_means500 <- rep(NA, 5000)  ## creating an empty vector of 5000 values.
+
+for(i in 1:5000){                ## starting the loop (5,000 iterations).
+  s500_loop <- sample(lot_area, 500)        ## drawing samples of size n = 50
+  sample_means500[i] <- mean(s500_loop) ## filling the empty values with the sample means.
+}
+
+
+sample_means500 <- sample_means500 %>% 
+  as_tibble()
+
+sample_means500 %>% 
+  ggplot(aes(x = value)) +
+  geom_histogram(color = "black", fill = "#ff8b8b", alpha = 0.5) +
+  scale_x_comma() + 
+  labs(x = "Mean value",
+       y = "Count") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+```
+
+
+---
+# Sampling distributions
+
+<br><br><br>
+
+Next, we use samples of size *n = 1,500*.
+
+
+---
+
+# Sampling distributions
+
+```{r, echo = F, dev = "svg", fig.height = 5.5}
+
+
+sample_means1500 <- rep(NA, 5000)  ## creating an empty vector of 5000 values.
+
+for(i in 1:5000){                ## starting the loop (5,000 iterations).
+  s1500_loop <- sample(lot_area, 1500)        ## drawing samples of size n = 50
+  sample_means1500[i] <- mean(s1500_loop) ## filling the empty values with the sample means.
+}
+
+
+sample_means1500 <- sample_means1500 %>% 
+  as_tibble()
+
+sample_means1500 %>% 
+  ggplot(aes(x = value)) +
+  geom_histogram(color = "black", fill = "#769293", alpha = 0.5) +
+  scale_x_comma() +
+  labs(x = "Mean value",
+       y = "Count") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+
+
+```
+
+
+
+---
+
+# Sampling distributions
+
+Standardizing the variable:
+
+
+```{r, echo = F, dev = "svg", fig.height = 5.25}
+
+sample_means1500 <- sample_means1500 %>% 
+  mutate(std_area = (value - mean(value)) / sd(value))
+
+sample_means1500 %>% 
+  ggplot(aes(x = std_area)) +
+  geom_histogram(color = "black", fill = "#769293", alpha = 0.5) +
+  scale_x_comma() +
+  labs(x = "z",
+       y = "Count") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+
+
+
+```
+
+
+---
+
+# Sampling distributions
+
+
+```{r, echo = F, dev = "svg", fig.height = 5.25}
+
+sample_means1500 <- sample_means1500 %>% 
+  mutate(std_area = (value - mean(value)) / sd(value))
+
+sample_means1500 %>% 
+  ggplot(aes(x = std_area)) +
+  geom_histogram(aes(y = ..density..), color = "black", fill = "#769293", binwidth = 0.25, alpha = 0.5) +
+  geom_density(alpha = .3, linewidth = 1) +
+  #stat_function(fun = dnorm, args = list(mean = 0, sd = 1), geom = "area", fill = "#8b9dc3", alpha = 0.5) +
+  labs(x = "z",
+       y = "Density") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+
+
+
+```
+
+---
+
+# Sampling distributions
+
+
+```{r, echo = F, dev = "svg", fig.height = 5.25}
+
+sample_means1500 <- sample_means1500 %>% 
+  mutate(std_area = (value - mean(value)) / sd(value))
+
+sample_means1500 %>% 
+  ggplot(aes(x = std_area)) +
+  geom_histogram(aes(y = ..density..), color = "black", fill = "#769293", binwidth = 0.25, alpha = 0.5) +
+  geom_density(alpha = .3, linewidth = 1) +
+  stat_function(fun = dnorm, args = list(mean = 0, sd = 1), geom = "area", fill = "#8b9dc3", alpha = 0.5) +
+  labs(x = "z",
+       y = "Density") +
+  easy_x_axis_title_size(13) +
+  easy_y_axis_title_size(13)
+
+
+
+```
+
+
+
+---
 
 layout: false
 class: inverse, middle
